--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <th>Valor</th>
                     <th class="center">Ações</th>
                 </thead>
-                <tbody>
+                <tbody id="tbody">
 
                 </tbody>
             </table>
